[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/vaporwave_wallpaper.jpg" type="Texture" id=1]
[ext_resource path="res://scenes/Music.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Gameplay.gd" type="Script" id=3]
[ext_resource path="res://assets/Jura-DemiBold.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/Jura-Medium.otf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/Conveyor.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 11
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 11
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 11
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 11
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Gameplay" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.458824, 0.458824, 0.458824, 1 )
position = Vector2( 320.01, 179.59 )
scale = Vector2( 0.167167, 0.167422 )
texture = ExtResource( 1 )

[node name="Conveyor" parent="." instance=ExtResource( 9 )]
position = Vector2( 323, 169.13 )

[node name="StatsRect" type="ColorRect" parent="."]
margin_left = 57.0
margin_top = 97.0
margin_right = 176.0
margin_bottom = 224.0
color = Color( 0, 0, 0, 0.666667 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="StatsRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -45.5
margin_top = 13.8468
margin_right = 47.5
margin_bottom = 31.8468
custom_fonts/font = SubResource( 1 )
text = "Score:"

[node name="ScoreValueLabel" type="Label" parent="StatsRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -45.5
margin_top = 31.8468
margin_right = 47.5
margin_bottom = 48.8468
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboLabel" type="Label" parent="StatsRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -45.5
margin_top = 65.9286
margin_right = 47.5
margin_bottom = 83.9286
custom_fonts/font = SubResource( 3 )
text = "Combo:"

[node name="ComboValueLabel" type="Label" parent="StatsRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -45.5
margin_top = 83.9286
margin_right = 47.5
margin_bottom = 100.929
custom_fonts/font = SubResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLabels" type="Control" parent="."]
margin_left = 251.0
margin_top = 297.0
margin_right = 394.0
margin_bottom = 310.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DLabel" type="Label" parent="ButtonLabels"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.5
margin_top = -6.5
margin_right = -36.5
margin_bottom = 6.5
custom_fonts/font = SubResource( 5 )
text = "D"
align = 1
valign = 1

[node name="FLabel" type="Label" parent="ButtonLabels"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.5
margin_top = -6.5
margin_right = 0.5
margin_bottom = 6.5
custom_fonts/font = SubResource( 6 )
text = "F"
align = 1
valign = 1

[node name="JLabel" type="Label" parent="ButtonLabels"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 0.5
margin_top = -6.5
margin_right = 34.5
margin_bottom = 6.5
custom_fonts/font = SubResource( 7 )
text = "J"
align = 1
valign = 1

[node name="KLabel" type="Label" parent="ButtonLabels"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 34.5
margin_top = -6.5
margin_right = 71.5
margin_bottom = 6.5
custom_fonts/font = SubResource( 8 )
text = "K"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" parent="." instance=ExtResource( 2 )]

[node name="Counters" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 444.656
margin_top = 77.6291
margin_right = 617.656
margin_bottom = 263.629
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PerfectLabel" type="Label" parent="Counters"]
margin_right = 104.0
margin_bottom = 14.0
text = "Perfects"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PerfectCountLabel" type="Label" parent="Counters"]
margin_top = 14.0
margin_right = 40.0
margin_bottom = 28.0
text = "0"

[node name="GreatLabel" type="Label" parent="Counters"]
margin_top = 28.0
margin_right = 42.0
margin_bottom = 42.0
text = "Greats"

[node name="GreatCountLabel" type="Label" parent="Counters"]
margin_top = 42.0
margin_right = 40.0
margin_bottom = 56.0
text = "0"

[node name="GoodCountLabel" type="Label" parent="Counters"]
margin_top = 70.0
margin_right = 40.0
margin_bottom = 84.0
text = "0"

[node name="GoodLabel" type="Label" parent="Counters"]
margin_top = 56.0
margin_right = 41.0
margin_bottom = 70.0
text = "Goods"

[node name="MissesLabel" type="Label" parent="Counters"]
margin_top = 85.2995
margin_right = 40.0
margin_bottom = 99.2995
text = "Misses"

[node name="MissCountLabel" type="Label" parent="Counters"]
margin_top = 99.2995
margin_right = 40.0
margin_bottom = 113.3
text = "0"
